# sh.rs

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
assets/: style.css
db/: init.sql
server/: Cargo.toml
server/src/: logs.rs  main.rs
server/src/models/: page.rs
src/: config.rs  db.rs  errors.rs  logs.rs  main.rs  templates.rs
src/controllers/: mod.rs  pages.rs  shorts.rs  stats.rs
src/models/: mod.rs  shorts.rs  stats.rs
src/repos/: cache.rs  db.rs
src/routes/: mod.rs  pages.rs  shorts.rs  stats.rs
templates/: base.html  index.html  navbar.html
templates/new_short/: index.html
