[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
small_uid = "0.2.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tera = "1.20.0"
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }

[build-dependencies]
copy_to_output = "2.2.0"
